added the nav section and styled it using bootstrap

--- a/index.html
+++ b/index.html
@@ -48,6 +48,81 @@
                 </div>
             </div>
         </div>
+        <nav
+        class="navbar d-sm-none pb-2 d-lg-block  py-3 header-bottom pt-3 bg-white d-flex navbar-expand-sm px-2  border-bottom m-3">
+        <ul class="navbar-nav pr-3">
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">us</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">tech</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">fashion</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">entertainment</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">tech</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">sports</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">politics</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">horizon</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">weather</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">us</a>
+            </li>
+            <li class="nav-child border-right">
+                <a class="nav-child-link font-weight-bold text-dark" href="#">newsgeek</a>
+            </li>
+            <li class="nav-child d-flex">
+                <input class="w-50" type="text" placeholder="search" name="search">
+                <i class="fas fa-search pt-2"></i>
+            </li>
+        </ul>
+    </nav>
+    <nav
+        class=" sm-d-none d-lg-block lower-nav pb-2 d-flex navbar-expand px-2 py-2 header-bottom pt-3 bg-white border-bottom m-3 ">
+        <ul class="navbar">
+            <li class="nav-child">
+                <a class="nav-child-link active font-weight-bold text-dark" href="#">Trending</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+            <li class="nav-child pl-3">
+                <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
+            </li>
+
+        </ul>
+    </nav>
       </header>
 
 
