worked on the subscribe section,and worked on the footer section

--- a/index.html
+++ b/index.html
@@ -2484,6 +2484,194 @@
                   </div>
                </article>
            </div>
+            <!-- subscribe -->
+    <div class="border-top bg-white text-center pt-3 pb-2 font-weight-bold">
+
+    </div>
+    <div class="row bg-white subscribe pb-5">
+        <div class=" col-md-12 col-lg-7 col-12 col-xl-7">
+            <h2 class="text-danger font-weight-bold text-uppercase">Subscribe</h2>
+            <div class="row bg-light pt-5 pb-5 ">
+                <div class="col-12 col-md-6 col-lg-5 position-relative pt-3 text-sm-center text-md-left">
+                    <div class="img-prev ">
+                        <img src="https://d.newsweek.com/en/full/1656193/cover-october-30-2020.jpg?w=170&q=95&f=be2e90c46dd8a717368f947b7d46d40f"
+                            alt="Subscribe img-thumbnail">
+                    </div>
+                    <div class="img-current position-absolute">
+                        <img src="https://d.newsweek.com/en/full/1653518/cover-october-23-2020.jpg?w=170&q=95&f=b35fed654708fe1b577840164dadeacf"
+                            alt="Subscribe img-thumbnail">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-7 pt-5 text-sm-center text-md-left">
+                    <h3 class="font-weight-bolder mb-3 card-title"> In-depth Stories You Don't See Elsewhere About
+                        Topics You Want to Read!</h3>
+
+                    <p>
+                        All Access + Weekly Delivery.<br>
+                        Choose A Membership That's Perfect for You!
+                    </p>
+
+                    <button
+                        class="text-uppercase text-center bg-danger rounded-0 border-0 font-weight-bolder text-white mt-3 pt-2 pb-2 pl-2 pr-2"
+                        type="button">
+                        Subscribe <i class="fas fa-angle-right"></i>
+                    </button>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-5 col-xl-5">
+            <h2 class="text-danger font-weight-bold text-uppercase">Newsletter</h2>
+            <div class="row newsletter">
+                <div class="col-12 col-md-6 position-relative p-5 background-newsletter">
+                </div>
+                <div class="col-12 col-md-6 border bg-white pt-3 pb-5">
+                    <h3 class="font-weight-bolder mb-3 card-title"> The starting 3</h3>
+
+                    See why nearly a quarter of a million subscribers begin their day with the Starting 5.
+
+                    <input class="mx-auto mb-2 form-control" type="email" placeholder="Email address">
+
+                    <button
+                        class="text-left bg-danger rounded-0 border-0 font-weight-bolder text-white mt-3 pt-2 pb-2 pl-2 pr-2 text-uppercase"
+                        type="button">
+                        Free Signup <i class="fas fa-angle-right"></i>
+                    </button>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    <footer class="bg-white pt-4 border-top">
+        <div class="row pb-3 border-bottom">
+            <div class="col-12 col-md-9 d-md-flex d-block align-items-end">
+                <a href="#">
+                    <img width="263" src="images/newsweek-logo.png" alt="Logo Footer">
+                </a>
+
+                <p class="pl-4 mt-3 mt-md-0">
+                    &copy; 2020 NEWSWEEK DIGITAL LLC
+                </p>
+            </div>
+            <div class="mt-3 mt-md-0 col-12 col-md-3 d-flex justify-content-md-end align-items-center">
+                <a href="#" class="pr-2">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+                <a href="#" class="pr-2">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" class="pr-2">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="#" class="pr-2">
+                    <i class="fab fa-tumblr"></i>
+                </a>
+                <a href="#" class="pr-2">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+            </div>
+        </div>
+        <ul class="d-flex flex-row flex-wrap mt-2 footer-ul">
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link font-weight-bold">
+                    Editions |
+                </a>
+            </li>
+            <li class="nav-item pl-1">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    U.S. edition |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    日本 |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Pakistan |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Polskar |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Roumania |
+                </a>
+            </li>
+        </ul>
+
+        <ul class="d-flex flex-row flex-wrap footer-ul">
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-3">
+                    About US |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Collections |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Contact US |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Editorial Guidelines |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Advertise |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Copyright |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Terms & Conditions |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Privacy policy |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0">
+                    Cookies policy |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0 ">
+                    Terms of sales |
+                </a>
+            </li>
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link pr-0 pl-0 ">
+                    Archive |
+                </a>
+            </li>
+
+        </ul>
+        <ul class="d-flex flex-row flex-wrap footer-ul">
+            <li class="nav-item pl-3">
+                <a href="#" class="nav-link">
+                    GDPR Privacy settings |
+                </a>
+            </li>
+        </ul>
+    </footer>
+
        </div>
 
                                   
