fixed some errors in my small screen design layout

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   Trump Greets Supporters Gathered Outside Hospital Treating Him for COVID
                 </a>
               </h3>
-              <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+              <p class="card-text">who won the final presidential debate between camus and willow.</p>
             </div>
             <div class="row border-top pt-4">
               <div class="col-md-2 col-2 pl-0 pr-0">
@@ -176,7 +176,7 @@
                   Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                 </a>
               </h3>
-              <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+              <p class="card-text">who won the final presidential debate between camus and willow.</p>
             </div>
           </article>
 
@@ -192,7 +192,7 @@
                   Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                 </a>
               </h3>
-              <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+              <p class="card-text">who won the final presidential debate between camus and willow.</p>
             </div>
           </article>
 
@@ -208,7 +208,7 @@
                   Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                 </a>
               </h3>
-              <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+              <p class="card-text">who won the final presidential debate between camus and willow.</p>
             </div>
           </article>
 
@@ -224,7 +224,7 @@
                   Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                 </a>
               </h3>
-              <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+              <p class="card-text">who won the final presidential debate between camus and willow.</p>
             </div>
           </article>
 
@@ -240,7 +240,7 @@
                   Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                 </a>
               </h3>
-              <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+              <p class="card-text">who won the final presidential debate between camus and willow.</p>
             </div>
           </article>
 
@@ -920,7 +920,7 @@
                         Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                       </a>
                     </h3>
-                    <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+                    <p class="card-text">who won the final presidential debate between camus and willow.</p>
                   </div>
                 </article>
 
@@ -936,7 +936,7 @@
                         Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                       </a>
                     </h3>
-                    <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+                    <p class="card-text">who won the final presidential debate between camus and willow.</p>
                   </div>
                 </article>
 
@@ -952,7 +952,7 @@
                         Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                       </a>
                     </h3>
-                    <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+                    <p class="card-text">who won the final presidential debate between camus and willow.</p>
                   </div>
                 </article>
 
@@ -968,7 +968,7 @@
                         Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                       </a>
                     </h3>
-                    <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+                    <p class="card-text">who won the final presidential debate between camus and willow.</p>
                   </div>
                 </article>
 
@@ -984,7 +984,7 @@
                         Trump Accuses Biden of Saying 'Super Predator'—Here's What He Actually Said
                       </a>
                     </h3>
-                    <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+                    <p class="card-text">who won the final presidential debate between camus and willow.</p>
                   </div>
                 </article>
 
@@ -1093,7 +1093,7 @@
                         Trump Greets Supporters Gathered Outside Hospital Treating Him for COVID
                       </a>
                     </h3>
-                    <p class="card-text">The First Lady hasn't visited the president in hospital and it looks unlikely that she will while they both have COVID-19.</p>
+                    <p class="card-text">who won the final presidential debate between camus and willow.</p>
                   </div>
                   <div class="row border-top pt-4">
                     <div class="col-md-2 col-2 pl-0 pr-0">
