fixed linter errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <div class="container-fluid pl-0 pr-0">
       <div class="header-top bg-danger  row pt-3 pb-3 pr-0 pl-0  text-white">
-        <div class="col-4 meteo d-none d-lg-block text-white" id="meteo ">
+        <div class="col-4  d-none d-lg-block text-white" >
           <a class="font-weight-bold text-white" href="weather-details">
             <img width="25" src=" https://g.newsweek.com/img/weather/34.png" alt="shining-sun"> 30
             <span class="country">lagos,NG></span>
