--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <div class="container-fluid pl-0 pr-0">
       <div class="header-top bg-danger  row pt-3 pb-3 pr-0 pl-0  text-white">
-        <div class="col-4  d-none d-lg-block text-white" >
+        <div class="col-4  d-none d-lg-block text-white">
           <a class="font-weight-bold text-white" href="weather-details">
             <img width="25" src=" https://g.newsweek.com/img/weather/34.png" alt="shining-sun"> 30
             <span class="country">lagos,NG></span>
@@ -210,8 +210,7 @@
       <article class="card">
         <div class="position-relative">
           <img class="card-img-top"
-            src="https://d.newsweek.com/en/full/1645826/jaime-harrison-lindsey-graham.webp?w=397&h=265&q=90&f=2d07f592deda1943a4e425fc6417914c"
-            alt="img">
+            src="https://d.newsweek.com/en/full/1645826/jaime-harrison-lindsey-graham.webp?w=397&h=265&q=90&f=2d07f592deda1943a4e425fc6417914c" alt="img">
           <p class="badge badge-secondary text-uppercase text-left">U.S.</p>
         </div>
         <div class="card-body pl-0 pr-0">
@@ -2351,10 +2350,10 @@
     <div class="col-md-4">
       <article class="row more border-bottom pb-2">
         <div class="col-md-2 col-1 pl-0 pr-0">
-            <img alt="img" height="120" width="100"
-              src="https://d.newsweek.com/en/full/1657581/tony-bobulinski-hunter-biden-wall-street-journal.webp?w=95&h=95&f=71a4d5e2db7c037079591723a4684067"
-              class="p-0">
-          
+          <img alt="img" height="120" width="100"
+            src="https://d.newsweek.com/en/full/1657581/tony-bobulinski-hunter-biden-wall-street-journal.webp?w=95&h=95&f=71a4d5e2db7c037079591723a4684067"
+            class="p-0">
+
         </div>
         <div class="col-md-10 col-10">
           <h4 class="mb-3 font-weight-bold pl-5">
@@ -2721,7 +2720,6 @@
     <div class="col-md-4">
       <article class="row more border-bottom pb-2">
         <div class="col-md-2 col-1 pl-0 pr-0">
-          <picture>
             <picture>
               <img alt="img"
                 src="https://d.newsweek.com/en/full/1657538/tim-burton-addams-family.webp?w=95&h=95&f=91ae5ee1450a6180b28e45712e5726c1">
