worked on the editor magazine badges

--- a/index.html
+++ b/index.html
@@ -2149,7 +2149,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2169,28 +2169,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
-        </div>
-        <div class="card-body pl-0 pr-0 pb-0 pt-0">
-          <h3 class="card-title font-weight-bold text-left">
-            <a href="#">
-              What Ghislaine Maxwell's Testimony Reveals About Jeffrey Epstein
-            </a>
-          </h3>
-          <p class="card-text">Ghislaine Maxwell talks of hiring "massage therapists" for Jeffrey Epstein and confirms
-            their relationship was "intimate," but denies being his girlfriend in her revealing seven-hour deposition.
-          </p>
-        </div>
-      </article>
-    </div>
-
-
-    <div class="col-lg-3 mb-5 col-md-6">
-      <article class="card">
-        <div class="position-relative">
-          <img alt="img" class="card-img-top"
-            src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2211,7 +2190,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger"id="bottom-left" >Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2232,7 +2211,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-lef text-dangert"id="bottom-left" >Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2253,7 +2232,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left" >Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2274,7 +2253,28 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
+        </div>
+        <div class="card-body pl-0 pr-0 pb-0 pt-0">
+          <h3 class="card-title font-weight-bold text-left">
+            <a href="#">
+              What Ghislaine Maxwell's Testimony Reveals About Jeffrey Epstein
+            </a>
+          </h3>
+          <p class="card-text">Ghislaine Maxwell talks of hiring "massage therapists" for Jeffrey Epstein and confirms
+            their relationship was "intimate," but denies being his girlfriend in her revealing seven-hour deposition.
+          </p>
+        </div>
+      </article>
+    </div>
+
+
+    <div class="col-lg-3 mb-5 col-md-6">
+      <article class="card">
+        <div class="position-relative">
+          <img alt="img" class="card-img-top"
+            src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2294,7 +2294,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left">Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
