added some stylings to header section

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         </div>
       </div>
     </div>
-    <nav
-      class="navbar d-none d-lg-block  py-3 header-bottom bg-white  navbar-expand-sm px-2  border-bottom "
+    <nav class="navbar d-none d-lg-block  py-3 header-bottom bg-white  navbar-expand-sm px-2  border-bottom "
       id="header-nav">
       <ul class="navbar-nav pb-3 d-flex ">
         <li class="nav-child border-right pl-2 pr-2">
@@ -93,7 +92,7 @@
         </li>
         <li class="last-nav d-flex ml-auto pl-2 align-items-center mr-2">
           <input class="width" type="text" placeholder="search" name="search">
-           <i class="fas fa-search pt-2 ml-0" id="search"></i>
+          <i class="fas fa-search pt-2 ml-0" id="search"></i>
         </li>
 
 
@@ -2190,7 +2189,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left text-danger"id="bottom-left" >Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2211,7 +2210,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-lef text-dangert"id="bottom-left" >Politics</p>
+          <p class="badge badge-secondary text-uppercase text-lef text-dangert" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
@@ -2232,7 +2231,7 @@
         <div class="position-relative">
           <img alt="img" class="card-img-top"
             src="https://d.newsweek.com/en/full/1657157/jeffrey-epstein-ghislaine-maxwell-florida.webp?w=397&h=265&f=80142cf67b96b61f331a117eb7a0c699">
-          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left" >Politics</p>
+          <p class="badge badge-secondary text-uppercase text-left text-danger" id="bottom-left">Politics</p>
         </div>
         <div class="card-body pl-0 pr-0 pb-0 pt-0">
           <h3 class="card-title font-weight-bold text-left">
