--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <i class="far fa-user-circle pr-2" aria-hidden="true"></i>
           </a>
 
-          <a class="text-white d-none d-md-block d-lg-block pr-3" id="mit-font" href="#">LOGIN</a>
-          <a href="#" class="badge badge-pill badge-warning" id="mit-font">SUBSCRIBE &gt;</a>
+          <a class="text-white d-none d-md-block d-lg-block pr-3"  href="#">LOGIN</a>
+          <a href="#" class="badge badge-pill badge-warning" href="#" >SUBSCRIBE &gt;</a>
           <a class="text-white d-lg-none d-md-block pl-3" href="#" id="bars">
             <i class="fas fa-bars fa-lg pr-2" aria-hidden="true"></i>
           </a>
