fixed the header section and adjusted te border section of the subscribe and newsletter

--- a/index.html
+++ b/index.html
@@ -54,52 +54,50 @@
         </div>
       </div>
     </div>
-    <nav class="navbar d-none d-lg-block  py-3 header-bottom bg-white  navbar-expand-sm px-2  border-bottom "
+    <nav class="navbar d-none d-lg-block  header-bottom  bg-white navbar-expand px-2 border-bottom "
       id="header-nav">
-      <ul class="navbar-nav pb-3 d-flex ">
+      <ul class="navbar-nav pb-2 d-flex ">
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">us</a>
+          <a class="nav-child-link font-weight-bold text-dark" href="#">us</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">World</a>
+          <a class="nav-child-link font-weight-bold text-dark" href="#">World</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">business</a>
+          <a class="nav-child-link font-weight-bold text-dark" href="#">Business</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">sports</a>
+          <a class="nav-child-link font-weight-bold text-dark" href="#">Sports</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">electronics</a>
+          <a class="nav-child-link font-weight-bolder text-dark" href="#">Electronics</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">education</a>
+          <a class="nav-child-link font-weight-bolder text-dark" href="#">Education&intellect</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">culture</a>
+          <a class="nav-child-link font-weight-bolder text-dark" href="#">Culture & Travel</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">debate</a>
+          <a class="nav-child-link font-weight-bolder text-dark" href="#">Debate & counsel</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Agriculture</a>
+          <a class="nav-child-link font-weight-bolder text-dark" href="#">Agriculture & forestry</a>
         </li>
         <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">ecotourism</a>
+          <a class="nav-child-link font-weight-bolder text-dark" href="#">Ecotourism</a>
         </li>
         <li class="nav-child border-right  pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark " href="#">travel</a>
+          <a class="nav-child-link font-weight-bolder text-dark " href="#">Travel</a>
         </li>
-        <li class="last-nav d-flex ml-auto pl-2 align-items-center mr-2">
+        <li class="last-nav d-flex pl-2 align-items-center mr-2">
           <input class="width" type="text" placeholder="search" name="search">
           <i class="fas fa-search pt-2 ml-0" id="search"></i>
         </li>
-
-
       </ul>
     </nav>
     <nav
-      class=" d-none d-lg-block lower-nav pb-2  navbar-expand px-2 py-2 header-bottom pt-3 bg-white border-bottom m-3 ">
+      class=" d-none d-lg-block lower-nav pb-2  navbar-expand  header-bottom  bg-white border-bottom ">
       <ul class="navbar ">
         <li class="nav-child">
           <a class="nav-child-link active font-weight-bold text-dark" href="#">Trending</a>
@@ -1087,7 +1085,7 @@
                 <img class="card-img-top"
                   src="https://d.newsweek.com/en/full/1645885/donald-melania-trump-debate.webp?w=397&h=265&q=90&f=e434ccded94ac92cf7401b2859c7d23e"
                   alt="img">
-                <p class="badge badge-secondary text-uppercase text-left bottom-left">Politics</p>
+                <p class="badge badge-secondary text-uppercase text-left text-danger bottom-left">Politics</p>
               </div>
               <div class="card-body pl-0 pr-0">
                 <h3 class="card-title font-weight-bold text-left">
@@ -1103,7 +1101,7 @@
             <article class="card">
               <div class="position-relative">
                 <img class="card-img-top" src="https://oschoolelearning.com/images/divers/osch.jpg" alt="img">
-                <p class="badge badge-secondary text-uppercase text-left bottom-left">U.S.</p>
+                <p class="badge badge-secondary text-uppercase text-left text-danger bottom-left">U.S.</p>
               </div>
               <div class="card-body pl-0 pr-0">
                 <h3 class="card-title font-weight-bold text-left">
@@ -1121,7 +1119,7 @@
                 <img class="card-img-top"
                   src="https://d.newsweek.com/en/full/1645826/jaime-harrison-lindsey-graham.webp?w=397&h=265&q=90&f=2d07f592deda1943a4e425fc6417914c"
                   alt="img">
-                <p class="badge badge-secondary text-uppercase text-left bottom-left">U.S.</p>
+                <p class="badge badge-secondary text-uppercase text-danger text-left bottom-left">U.S.</p>
               </div>
               <div class="card-body pl-0 pr-0">
                 <h3 class="card-title font-weight-bold text-left">
@@ -1139,7 +1137,7 @@
                 <img class="card-img-top"
                   src="https://d.newsweek.com/en/full/1645826/jaime-harrison-lindsey-graham.webp?w=397&h=265&q=90&f=2d07f592deda1943a4e425fc6417914c"
                   alt="img">
-                <p class="badge badge-secondary text-uppercase text-left bottom-left">U.S.</p>
+                <p class="badge badge-secondary text-uppercase text-danger text-left ">U.S.</p>
               </div>
               <div class="card-body pl-0 pr-0">
                 <h3 class="card-title font-weight-bold text-left">
@@ -1157,7 +1155,7 @@
                 <img class="card-img-top"
                   src="https://d.newsweek.com/en/full/1645809/foster-care-adoption-racism-fatherhood.webp?w=397&h=265&q=90&f=734864010f90e330a801df54ad4e5d7b"
                   alt="img">
-                <p class="badge badge-secondary text-uppercase text-left bottom-left">My Turn</p>
+                <p class="badge badge-secondary text-uppercase text-left text-danger bottom-left">My Turn</p>
               </div>
               <div class="card-body pl-0 pr-0">
                 <h3 class="card-title font-weight-bold text-left">
@@ -2863,10 +2861,10 @@
       </article>
     </div>
     <!-- subscribe -->
-    <div class="border-top bg-white text-center pt-3 pb-2 font-weight-bold">
+    <div class="border-top bg-white text-center pt-3 pb-2  font-weight-bold">
 
     </div>
-    <div class="row bg-white subscribe pb-5">
+    <div class="row bg-white border-top pt-4 subscribe pb-5">
       <div class=" col-md-12 col-lg-7 col-12 col-xl-7">
         <h2 class="text-danger font-weight-bold text-uppercase">Subscribe</h2>
         <div class="row bg-light pt-5 pb-5 ">
