--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="bg-white">
   <header>
     <div class="container-fluid pl-0 pr-0 ">
-      <div class="header-top row pt-3 pb-3 pr-0 pl-0 mr-0 ml-0 text-white " id="header-menu">
+      <div class="header-top row pt-3 pb-3 pr-0 pl-0 mr-0 ml-0 text-white" id="header-menu">
         <div class="col-4  d-none d-lg-block text-white">
           <a class="font-weight-bold text-white" href="weather-details">
             <img width="25" src=" https://g.newsweek.com/img/weather/34.png" alt="shining-sun"> 30
@@ -41,54 +41,52 @@
           </a>
 
         </div>
-        <div class="col-9 col-lg-5 justify-content-end align-items-end d-flex font-weight-bold pl-2 pr-2 ">
+        <div class="col-9 col-lg-5 justify-content-end align-items-end d-flex font-weight-bold  ">
           <a class="text-white d-none d-md-none d-block " href="#">
             <i class="far fa-user-circle pr-2" aria-hidden="true"></i>
           </a>
 
           <a class="text-white d-none d-md-block d-lg-block pr-3" href="#">LOGIN</a>
-          <a href="#" class="badge badge-pill badge-warning" >SUBSCRIBE &gt;</a>
+          <a href="#" class="badge badge-pill badge-warning">SUBSCRIBE &gt;</a>
           <a class="text-white d-lg-none d-md-block pl-3" href="#" id="bars">
             <i class="fas fa-bars fa-lg pr-2" aria-hidden="true"></i>
           </a>
         </div>
       </div>
     </div>
-    <nav class="navbar d-none d-lg-block  header-bottom  bg-white navbar-expand px-2 border-bottom "
+    <nav
+      class="first-navbar position-relative d-none d-lg-block  header-bottom  bg-white navbar-expand px-2 border-bottom  "
       id="header-nav">
       <ul class="navbar-nav pb-2 d-flex ">
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bold text-dark" href="#">us</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">us</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bold text-dark" href="#">World</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">World</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bold text-dark" href="#">Business</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">Business</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bold text-dark" href="#">Sports</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">Sports</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Electronics</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">Business</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Education&intellect</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">Sports</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Culture & Travel</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bolder text-dark" href="#">Electronics</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Debate & counsel</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bolder text-dark" href="#">Education&intellect</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Agriculture & forestry</a>
+        <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bolder text-dark" href="#">Ecotourism</a>
         </li>
-        <li class="nav-child border-right pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark" href="#">Ecotourism</a>
-        </li>
-        <li class="nav-child border-right  pl-2 pr-2">
-          <a class="nav-child-link font-weight-bolder text-dark " href="#">Travel</a>
+        <li class="nav-item border-right  ">
+          <a class="nav-link  font-weight-bolder text-dark " href="#">Travel</a>
         </li>
         <li class="last-nav d-flex pl-2 align-items-center mr-2">
           <input class="width" type="text" placeholder="search" name="search">
@@ -96,39 +94,37 @@
         </li>
       </ul>
     </nav>
-    <nav
-      class=" d-none d-lg-block lower-nav pb-2  navbar-expand  header-bottom  bg-white border-bottom ">
-      <ul class="navbar ">
-        <li class="nav-child">
-          <a class="nav-child-link active font-weight-bold text-dark" href="#">Trending</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
-        <li class="nav-child pl-3">
-          <a class="nav-child-link font-weight-bold text-muted" href="#">Donald trump</a>
-        </li>
+    <ul
+      class="nav d-none d-lg-flex   lower-nav pb-2  w-100  header-bottom navbar-expand text-nowrap bg-white border-bottom flex-row flex-nowrap ">
+      <li class="nav-item">
+        <a class="nav-link  active font-weight-bold text-dark" href="#">Trending</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link  font-weight-bold text-muted" href="#">Donald trump</a>
+      </li>
 
-      </ul>
-    </nav>
+    </ul>
   </header>
   <!-- small screen appear as block -->
   <div class="row d-block d-md-none d-lg-none d-xl-none mt-5 pt-4">
@@ -174,7 +170,7 @@
     </div>
 
     <!--featured stories-->
-    <div class="col-12">
+    <div class="col-12 ">
 
       <h2 class="mb-3 text-uppercase section-title">Featured Stories</h2>
       <article class="card">
@@ -1074,8 +1070,8 @@
 
 
   <!--features stories section for large screen-->
-  <div class="d-none d-md-block d-lg-block d-xl-block">
-    <div class="row bg-white pt-5">
+  <div class="d-none d-md-block d-lg-block  d-xl-block">
+    <div class="row bg-white mt-md-3 mt-lg-0 pt-5">
       <div class="col-lg-9 col-md-12">
         <div class="row">
           <div class="col-lg-4 col-md-6">
@@ -1284,7 +1280,7 @@
                 <img class="card-img-top"
                   src="https://d.newsweek.com/en/full/1657578/donald-trump-joe-biden-debate-winner-analysis.webp?w=591&h=364&f=75bfadc9ff22a9cb84670ce42a6688a0"
                   alt="img">
-                <p class="badge badge-secondary text-uppercase text-left bottom-left">Politics</p>
+                <p class="badge badge-secondary text-uppercase text-danger text-left bottom-left">Politics</p>
               </div>
               <div class="card-body pl-0 pr-0">
                 <h3 class="card-title font-weight-bold text-left">
@@ -2890,7 +2886,7 @@
             </p>
 
             <button
-              class="text-uppercase text-center bg-danger rounded-0 border-0 font-weight-bolder text-white mt-3 pt-2 pb-2 pl-2 pr-2"
+              class="text-uppercase text-center subscribe-btn  rounded-0 border-0 font-weight-bolder text-white mt-3 pt-2 pb-2 "
               type="button">
               Subscribe <i class="fas fa-angle-right"></i>
             </button>
@@ -2911,7 +2907,7 @@
             <input class="mx-auto mb-2 form-control" type="email" placeholder="Email address">
 
             <button
-              class="text-left bg-danger rounded-0 border-0 font-weight-bolder text-white mt-3 pt-2 pb-2 pl-2 pr-2 text-uppercase"
+              class="text-left subscribe-btn rounded-0 border-0 font-weight-bolder text-white mt-3 pt-2 pb-2  text-uppercase"
               type="button">
               Free Signup <i class="fas fa-angle-right"></i>
             </button>
@@ -2928,7 +2924,7 @@
             <img width="263" src="images/newsweek-logo.png" alt="Logo Footer">
           </a>
 
-          <p class="pl-4 mt-3 mt-md-0">
+          <p class="pl-4 mt-3 text-muted mt-md-0 newsweek-undernote">
             &copy; 2020 NEWSWEEK DIGITAL LLC
           </p>
         </div>
@@ -2952,32 +2948,32 @@
       </div>
       <ul class="d-flex flex-row flex-wrap mt-2 footer-ul">
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link font-weight-bold">
+          <a href="#" class="nav-link text-secondary font-weight-bold">
             Editions |
           </a>
         </li>
         <li class="nav-item pl-1">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link  text-secondary font-weight-light pr-0 pl-0">
             U.S. edition |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             日本 |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Pakistan |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Polskar |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Roumania |
           </a>
         </li>
@@ -2985,69 +2981,69 @@
 
       <ul class="d-flex flex-row flex-wrap footer-ul">
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-3">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-3">
             About US |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Collections |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Contact US |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Editorial Guidelines |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Advertise |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link  text-secondary font-weight-light pr-0 pl-0">
             Copyright |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Terms & Conditions |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary  font-weight-light pr-0 pl-0">
             Privacy policy |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0">
             Cookies policy |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0 ">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0 ">
             Terms of sales |
           </a>
         </li>
         <li class="nav-item pl-3">
-          <a href="#" class="nav-link pr-0 pl-0 ">
+          <a href="#" class="nav-link text-secondary font-weight-light pr-0 pl-0 ">
             Archive |
           </a>
         </li>
+        <ul class="d-flex flex-row flex-wrap  footer-ul">
+          <li class="nav-item pl-3">
+            <a href="#" class="nav-link font-weight-light text-secondary">
+              GDPR Privacy settings |
+            </a>
+          </li>
+        </ul>
+      </ul>
 
-      </ul>
-      <ul class="d-flex flex-row flex-wrap footer-ul">
-        <li class="nav-item pl-3">
-          <a href="#" class="nav-link">
-            GDPR Privacy settings |
-          </a>
-        </li>
-      </ul>
     </footer>
 
   </div>
@@ -3066,12 +3062,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
   </script>
-
-  <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
 </body>
 
 </html>
