adjusted the navbar

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       id="header-nav">
       <ul class="navbar-nav pb-2 d-flex ">
         <li class="nav-item border-right ">
-          <a class="nav-link  font-weight-bold text-dark" href="#">us</a>
+          <a class="nav-link  font-weight-bolder text-dark" href="#">us</a>
         </li>
         <li class="nav-item border-right ">
           <a class="nav-link  font-weight-bold text-dark" href="#">World</a>
@@ -74,10 +74,13 @@
           <a class="nav-link  font-weight-bold text-dark" href="#">Business</a>
         </li>
         <li class="nav-item border-right ">
+          <a class="nav-link  font-weight-bold text-dark" href="#">Business</a>
+        </li>
+        <li class="nav-item border-right ">
           <a class="nav-link  font-weight-bold text-dark" href="#">Sports</a>
         </li>
         <li class="nav-item border-right ">
-          <a class="nav-link  font-weight-bolder text-dark" href="#">Electronics</a>
+          <a class="nav-link  font-weight-bold text-dark" href="#">Sports</a>
         </li>
         <li class="nav-item border-right ">
           <a class="nav-link  font-weight-bolder text-dark" href="#">Education&intellect</a>
